--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "mongoose": "^8.14.1",
     "zustand": "^5.0.4"
   },
+  "engines": {
+  "node": "16.x" 
+  },
   "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
+  
 }
